<resources>
    <string name="app_name">Blood Bank Semester Project</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="pick_an_image"><u>Pick an image</u></string>
    <string name="enter_info">If you would like to be a donor, please use this page to enter in your information.</string>
    <string name="become_donor">Become a Donor</string>
    <string name="help_string">You will find help here</string>
    <string name="city_string">Pick a City</string>
    <string name="blood_group">Blood Group</string>
    <string name="find_donors">Find donors</string>
    <string name="blood_group_et">Blood Group</string>
    <string name="password_et">Password</string>
    <string name="email_et">Email</string>
    <string name="mobile_number_et">Mobile Number</string>
    <string name="city_et">City</string>
    <string name="message_image">Write a message and add an image to help the people in your location. If you need help, put that in your message, and someone will help you.</string>
    <string name="post_request">Post Request</string>
    <string name="choose_location">Choose location</string>
    <string name="request_string">Make Request</string>
    <string name="password_string_resource">Password</string>
    <string name="or_text">Or</string>
    <string name="login_string">Login</string>
    <string name="to_text">To:</string>
    <string name="subject_textview">Subject:</string>
    <string name="send_string">Send</string>
</resources>
