<?xml version="1.0" encoding="utf-8"?>
<!--
 name: Clara McGrew
 date of Presentation: 4/21/2020
 project: Android Blood Bank Semester Project
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Actvities.SearchActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:text="@string/help_string"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/city_string"
        android:textColor="@android:color/black"
        android:textSize="36sp"/>

    <EditText
        android:id="@+id/city_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:hint="eg: Kalamazoo"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/blood_group"
        android:textColor="@android:color/black"
        android:textSize="36sp"/>
<EditText
    android:id="@+id/et_bloodGroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   android:layout_marginTop="10dp"
    android:layout_marginStart="20dp"
    android:hint="eg: A+"
    android:textColor="@android:color/black"
    android:textSize="24sp"/>

    <Button
        android:id="@+id/find_donors"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/button_bg"
        android:text="@string/find_donors"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>


</LinearLayout>

</ScrollView>